# prompto

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  tests.rs
src/prompto/: mod.rs
src/promptor/: mod.rs
src/vento/: mod.rs
