[package]
name = "promptor"
description = "Simple, functional, monadic command-line prompts."
categories = ["command-line-interface"]
keywords = ["prompto", "prompt", "cli", "input", "validation"]
version = "0.1.0"
authors = ["William Howell <wlm.howell@gmail.com>"]
license = "MIT"
edition = "2018"

readme = "README.md"
repository = "https://github.com/willowell/promptor"

exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
